--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Objective: Refactor FRCNN code to deal with multiple labels
 
-https://colab.research.google.com/drive/1Z8DomjjKejm0OBigsdXOfA5zWDixWnWq
+My implementation at: https://colab.research.google.com/drive/1Z8DomjjKejm0OBigsdXOfA5zWDixWnWq
